fix: padding off screen

--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,13 @@
 .top {
   justify-self: flex-start;
   width: 100%;
-  padding: 0 2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 .text-info {
-  margin-right: 4rem;
+  margin-right: 2rem;
 }
 
 .middle {
